--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/dialog_successful_find.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/dialog_successful_find.xml
@@ -19,7 +19,7 @@ Would you like to leave a message in the chat?"/>
         android:layout_below="@id/dialog_info">
 
         <Button
-            android:id="@+id/dialog_cancel"
+            android:id="@+id/dialog_ignore_cache_chat"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.50"
@@ -27,7 +27,7 @@ Would you like to leave a message in the chat?"/>
             android:text="No"/>
 
         <Button
-            android:id="@+id/dialog_ok"
+            android:id="@+id/dialog_enter_cache_chat"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
