--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/content_individual_chat_room.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/content_individual_chat_room.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".CacheChatRoom"
+    tools:context=".ChatIndividualActivity"
     tools:showIn="@layout/activity_cache_chat_room">
 
     <LinearLayout
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toBottomOf="@id/app_bar">
 
         <ProgressBar
-            android:id="@+id/cache_chat_retrieve_progress"
+            android:id="@+id/chat_retrieve_progress"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
 
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvCacheChat"
+            android:id="@+id/rvChat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
