--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_chat_list.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/activity_chat_list.xml
@@ -55,6 +55,49 @@
             app:layout_constraintTop_toBottomOf="parent">
 
         </android.support.v7.widget.RecyclerView>
+
+        <Button
+            android:id="@+id/new_chat_button"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="New Chat"
+            android:textStyle="bold" />
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <AutoCompleteTextView
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="username"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/new_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="new message"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+
     </LinearLayout>
 
     <!--<android.support.design.widget.TextInputLayout-->
