--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/chat_view_list.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/layout/chat_view_list.xml
@@ -8,16 +8,18 @@
     android:paddingBottom="10dp"
     >
 
+
+
     <TextView
-        android:id="@+id/msg_creator"
+        android:id="@+id/username"
         android:padding="10dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.3"
+        android:layout_weight="1"
         />
 
     <TextView
-        android:id="@+id/msg"
+        android:id="@+id/new_message"
         android:layout_gravity="fill"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
